export type Role = "admin" | "viewer" | "api_consumer";

export type AuthUser = {
  email: string;
  role: Role;
};

export type UserItem = {
  id: number;
  email: string;
  full_name: string;
  is_active: boolean;
  role: Role;
  created_at: string;
  updated_at: string;
};

export type ApiKeyItem = {
  id: number;
  name: string;
  key_prefix: string;
  owner_id: number;
  scopes: string[];
  status: "active" | "revoked";
  created_at: string;
  expires_at: string | null;
  last_used_at: string | null;
};

export type RateLimitRule = {
  id: number;
  name: string;
  scope_type: "global" | "api_key" | "route";
  scope_value: string | null;
  algorithm: "token_bucket" | "sliding_window" | "fixed_window";
  limit_count: number;
  window_seconds: number;
  burst_allowance: number | null;
  status: "active" | "disabled";
  created_at: string;
};

export type JwtConfig = {
  id: number;
  name: string;
  algorithm: "HS256" | "RS256" | "ES256";
  signing_key_masked: string;
  public_key_masked: string | null;
  issuer: string | null;
  audience: string | null;
  access_token_ttl_seconds: number;
  refresh_token_ttl_seconds: number;
  status: "active" | "disabled";
  created_at: string;
};

export type IPBlock = {
  id: number;
  ip_address: string;
  reason: string;
  source: "manual" | "auto";
  status: "active" | "disabled";
  created_by: number | null;
  created_at: string;
  updated_at: string;
};

export type ThreatRule = {
  id: number;
  name: string;
  pattern: string;
  severity: "low" | "medium" | "high" | "critical";
  status: "active" | "disabled";
  created_by: number;
  created_at: string;
  updated_at: string;
};

export type AnalyticsSummary = {
  hours: number;
  total_requests: number;
  forwarded_requests: number;
  blocked_requests: number;
  rate_limited_requests: number;
  server_errors: number;
  events_by_type: Record<string, number>;
};

export type SecurityEvent = {
  id: number;
  event_type: string;
  source_ip: string;
  api_key_id: number | null;
  rule_id: number | null;
  method: string;
  path: string;
  status_code: number;
  created_at: string;
};
